Issue#2870 Dropdown items in navigation menu are hidden by default.

--- a/sites/all/modules/custom/airtribune/plugins/content_types/airtribune_user/style.css
+++ b/sites/all/modules/custom/airtribune/plugins/content_types/airtribune_user/style.css
@@ -72,8 +72,8 @@
   -webkit-box-shadow: 0 1px 3px rgba(46,75,89,0.8), 0 0 1px rgba(0,0,0,.2);
 
 }
-#sign-in .drop-item.user-login {height: 255px;}
-#sign-in .drop-item.flags {height: 85px;}
+#sign-in .drop-item.user-login {height: 255px;display:none;}
+#sign-in .drop-item.flags {height: 85px;display:none;}
 
 .user-login .pane-inner, .flags .pane-inner { margin:0; border:1px solid #edf7f8; background:url(images/login_bgr.png) repeat 0 0; position:absolute; padding:21px 9px 14px; text-align:right; width:180px; bottom:0; left:0; 
 
